# LearningOS

./: .gitignore  32bit-print.asm  CMakeLists.txt  LICENSE  Problem.md  boot_sect_disk.asm  bootsect.asm  build.ninja  build.sh  configure_ninja.py  configure_nt.py  function.c  kernel.cpp  main.asm  ninja_tool.py  runDebug.sh
cross_compiler/: build_cross_compiler.sh
drivers/: ports.cpp
src/: CMakeLists.txt  configure_nt.py
src/boot/: CMakeLists.txt  bootsect.asm  configure_nt.py  switch_pm.asm
src/drivers/: CMakeLists.txt  configure_nt.py
src/kernel/: CMakeLists.txt  configure_nt.py  kernel.cpp
